--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "app/helpers/constants.php",
             "app/helpers/redirect.php",
             "app/helpers/validate.php",
+            "app/helpers/pagination.php",
             "app/database/connect.php",
             "app/database/fetch.php"
         ],
