--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
             "name": "josevictor"
         }
     ],
-    "require": {}
+    "require": {
+        "league/plates": "3.*"
+    }
+    
 }
