--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
             "app/helpers/redirect.php",
             "app/helpers/validate.php",
             "app/helpers/pagination.php",
+            "app/helpers/fetchHelpers.php",
             "app/database/connect.php",
             "app/database/fetch.php"
         ],
